Added partials and Destroy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
         <h1 style="padding-bottom:25px;">You have found Home</h1>
         <p>Thanks for visiting.</p>
         <p>If you'd like to find the About page, <%= link_to 'Click Here', about_path %>.</p>
-        <div style="width:46%; float:left; background-color:rgba(23,45,12,0.2); margin:2%;"><p>Content on the left</p></div>
+        <div style="width:46%; float:left; background-color:rgba(23,45,12,0.2); margin:2%;"><p><%= link_to "See the articles listing", articles_path %></p></div>
         <div style="width:46%; float:right; background-color:rgba(83,85,82,0.2); margin:2%;"><p>Content on the right</p></div>
         
     </body>
