--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 <table>
     <tr>
         <th>Title</th>
-        <th>Describtion</th>
+        <th>Description</th>
     </tr>
     
     <% @articles.each do |a| %>
