--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,6 +54,19 @@
     padding-bottom: 15px;
 }
 
+
+.listing {
+    list-style: none;
+    padding: 0px;
+    
+}
+
+
+
+
+
+#FOOTER
+
 footer {
     margin-top: 45px;
     padding-top: 5px;
